--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
@@ -30,4 +31,5 @@
     "globals": "^15.14.0",
     "vite": "^6.1.0"
   }
+  
 }
